# boko

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  gh-pages.yml
benches/: conversion.rs
docs/: css-parsing-plan.md  kfx-cover-thumbnails.md  kfx-development-notes.md  kfx-fixes-plan.md  kfx-format-specification.md  kfx-format.md  kfx-implementation-gaps.md  kfx-imprint-comparison.md  kfx-iteration-workflow.md  kfx-symbol-mapping.md  kfx-symbol-report.md  kfx-toc-investigation.md
examples/: azw3_roundtrip.rs  bookrag.py  build_annotated_kfx_fixture.rs  epub_to_azw3.rs  kvg_parity.rs  kvg_typeset.rs  profile_convert.rs  roundtrip.rs  test_kf8.rs  test_martin.rs  test_mobi.rs
scripts/: analyze_css_mapping.py  analyze_kfx_mapping.py  check_inline_runs.py  compare_imprint_styles.py  compare_styles.py  diff_imprint_styles.py  full_imprint_compare.py  gen_kfx_enum.py  generate_css_test_epub.py  generate_tailwind_test_epub.py  investigate_symbols.py  kfx_diff.py  kfx_dump.py  kfx_loader.py  kfx_sections.py  kfx_smart_diff.py  kfx_structure.py  kfx_structure_check.py  kfx_symbols.py  kfx_to_css.py  sync_symbols.py
scripts/kfxlib/: __init__.py  generate_kpf_common.py  generate_kpf_using_cli.py  ion.py  ion_binary.py  ion_symbol_table.py  ion_text.py  jxr_container.py  jxr_image.py  jxr_misc.py  kfx_container.py  kpf_book.py  kpf_container.py  message_logging.py  original_source_epub.py  resources.py  unpack_container.py  utilities.py  version.py  windows_console.py  yj_book.py  yj_container.py  yj_metadata.py  yj_position_location.py  yj_structure.py  yj_symbol_catalog.py  yj_versions.py
scripts/kfxlib/calibre-plugin-modules/pypdf/: _writer.py
scripts/kfxlib/calibre-plugin-modules/pypdf/generic/: _link.py
src/: book.rs  error.rs  lib.rs  main.rs  optimize.rs  resolved.rs  util.rs  wasm.rs
src/book/: mod.rs
src/compiler/: arena.rs  css.rs  element_ref.rs  mod.rs  optimizer.rs  transform.rs  tree_sink.rs
src/compiler/data/: styles.css
src/css/: mod.rs  parsing.rs  style.rs  stylesheet.rs  tests.rs  types.rs
src/dom/: arena.rs  element_ref.rs  mod.rs  optimizer.rs  role_map.rs  transform.rs  tree_sink.rs
src/dom/data/: styles.css
src/dom/optimize/: dropcap.rs  fuse.rs  merge.rs  mod.rs  pass.rs  predicates.rs  prune.rs  table.rs  trim.rs  vacuum.rs  wrap.rs
src/epub/: mod.rs  parser.rs  reader.rs  writer.rs
src/export/: azw3.rs  css_gen.rs  epub.rs  html_synth.rs  kfx.rs  mod.rs  normalize.rs  text.rs
src/export/azw3/: guide.rs  kf8.rs  mod.rs
src/export/kfx/: content.rs  metadata_frags.rs  mod.rs  navigation.rs  positions.rs  resources.rs  survey.rs
src/import/: azw3.rs  epub.rs  kfx.rs  mobi.rs  mod.rs
src/import/epub/: mod.rs
src/io/: adapter.rs  byte_source.rs  mod.rs
src/ir/: font.rs  links.rs  mod.rs  node.rs  semantic.rs  style.rs
src/kfx/: auxiliary.rs  container.rs  context.rs  cover.rs  fragment.rs  ion.rs  metadata.rs  mod.rs  reader.rs  schema.rs  serialization.rs  storyline.rs  style.rs  style_registry.rs  style_schema.rs  symbols.rs  test_helpers.rs  tokens.rs  transforms.rs  writer.rs
src/kfx/storyline/: collapse.rs  export.rs  import.rs  ion_synth.rs  mod.rs  tests.rs
src/kfx/writer/: builder.rs  fragment.rs  mod.rs  navigation.rs  position.rs  resources.rs  serialization.rs  symbols.rs
src/kfx/writer/builder/: chunks.rs  content.rs  fragments.rs  mod.rs  tests.rs
src/kfx/writer/content/: extraction.rs  html_utils.rs  merging.rs  mod.rs
src/kfx/writer/content/extraction/: tests.rs
src/kfx/writer/style/: conversion.rs  font.rs  layout.rs  mod.rs  spacing.rs  tests.rs
src/markdown/: escape.rs  mod.rs  render.rs  slugify.rs
src/math/: latex.rs  mathml.rs  mod.rs
src/math/kvg/: emit.rs  font.rs  layout.rs  mod.rs  svg.rs
src/mobi/: filepos.rs  headers.rs  huffcdic.rs  index.rs  mod.rs  palmdoc.rs  parser.rs  patterns.rs  reader.rs  skeleton.rs  split.rs  tbs.rs  transform.rs  writer.rs  writer_transform.rs
src/model/: book.rs  chapter.rs  font.rs  links.rs  metadata.rs  mod.rs  node.rs  resolved.rs  section_tree.rs  semantic.rs
src/style/: cascade.rs  declaration.rs  mod.rs  properties.rs  style_pool.rs  to_css.rs  types.rs
src/style/parse/: border.rs  box_model.rs  font.rs  keywords.rs  mod.rs  stylesheet.rs  values.rs
src/transform/: css.rs  html.rs  mod.rs
tests/: azw3_roundtrip.rs  book_api_test.rs  calibre_compat_test.rs  cascade_golden.rs  container_test.rs  epub3_nav_toc.rs  epub_exports_fonts_and_toc.rs  epub_href_decoding.rs  epub_test.rs  error_classification.rs  export_validity.rs  kfx_annotated_metadata.rs  kfx_conformance.rs  kfx_dump.rs  kfx_font_extraction.rs  kfx_reproducible.rs  kfx_structure_test.rs  kfx_table_roundtrip.rs  link_resolution.rs  markdown_pipeline.rs  media_test.rs  mobi_test.rs  normalized_export.rs  optimize_assets.rs  parser_crash_corpus.rs  parsing_test.rs  structure_test.rs
tests/common/: mod.rs
tests/fixtures/: css-mapping-test.epub  css-mapping-test.kfx  epictetus.azw3  epictetus.epub  epictetus.kfx  epictetus.mobi  simple.azw3  simple.epub  split.azw3  split.epub
tools/: gold_math_parity.py
web/: app.js  index.html  style.css
