[package]
name = "boko"
version = "0.1.0"
edition = "2024"
description = "Fast ebook conversion library for EPUB and Kindle formats"
license = "MIT"
repository = "https://github.com/zacharydenton/boko"
homepage = "https://github.com/zacharydenton/boko"
documentation = "https://docs.rs/boko"
readme = "README.md"
keywords = ["ebook", "epub", "mobi", "azw3", "kindle"]
categories = ["parsing", "encoding"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["dep:clap"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
quick-xml = "0.39"
zip = { version = "7.1", default-features = false, features = ["deflate-flate2"] }
percent-encoding = "2.3"

# High-performance byte operations (SIMD-accelerated)
memchr = "2.7"
bstr = { version = "1.11", default-features = false, features = ["alloc"] }

html5ever = "0.38"
cssparser = "0.36"
selectors = "0.35"

# Base64 encoding for KFX raw media
base64 = "0.22"

# Ion binary format parsing for KFX dump tool
ion-rs = { version = "1.0.0-rc.11", features = ["experimental-reader-writer"] }

# SHA1 hashing for KFX content hashes (minimal, WASM-compatible)
sha1_smol = { version = "1.0", features = ["std"] }

# CLI argument parsing (only for binary)
clap = { version = "4", features = ["derive"], optional = true }

# Native: use fast zlib-rs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }

# WASM: use pure-Rust backend
[target.'cfg(target_arch = "wasm32")'.dependencies]
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
js-sys = "0.3"

[dev-dependencies]
tempfile = "3.14"
proptest = "1.6"
criterion = "0.8"

[[bin]]
name = "boko"
required-features = ["cli"]

[[bin]]
name = "kfx-dump"
path = "src/bin/kfx-dump.rs"

[[bench]]
name = "conversion"
harness = false
